Update of site - looks nicer

--- a/broadcast.html
+++ b/broadcast.html
@@ -1,15 +1,49 @@
+<!DOCTYPE html>
 <html>
-   <body>
-      <form action="" method="post" enctype="multipart/form-data">
-         <fieldset>
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="title" placeholder="Enter Title" />
-            <br />
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" placeholder="Enter a short description about yourself"></textarea>
-            <br />
-            <input type="submit" value="Create Profile" />
+	<head >	<title>Energy reduction</title>
+    </head>
+    <body bgcolor="#66CC33">
+	   
+		<header style = "background-color:black;padding:10px;margin-top: -20px;margin-right: -20px;margin-left:-20px">
+	    <table>
+			<tr>
+				<td> <img src = "logoWhite.png" width = "45%"> </td>
+				<td> <h1 style="font-size:8vmin;color:#66CC33;" align = right><b>Reducing energy consumption</b></h1> </td>
+				<td width = "5%"> </td>
+			</tr>
+	    </table>  
+		</header>
+	  
+	  <br>
+	  
+      <form action="" method="post" enctype="multipart/form-data" align = "center">
+		  <fieldset>
+		  <table>
+			<tr>
+				<h1 align = "middle"> <b>Add information concerning energy reduction</b></h1>
+			</tr>
+			<tr>
+			  <td align="left" height="40"><b>Length of the action:</b></td>
+			  <td align="left" height="40"><input type="number" id="length" name="length" min="1" placeholder="Enter time in min" /></td>
+			</tr>
+			<tr>
+			  <td align="left" height="40"><b>Amount of energy to save:</b></td>
+			  <td align="left" height="40"><input type="number" id="amountEnergy" name="amountEnergy" min = "1" placeholder="Enter amount in W"/></td>
+			  <p> </p>
+			</tr>
+			<tr>
+			  <td align="right" height="40"> <input type="image" src="submit.gif" alt="Submit" /> </td>
+			</tr>
+		  </table>            
          </fieldset>
       </form>
-   </body>
+	  
+	  <hr> </hr> 
+
+	  <h5 align = "middle"> In case of problem, send us an email at <a href="mailto:support.wattsOff@gmail.com">
+		   support.wattsOff@gmail.com</a>. <br>
+		   Copyright &copy; WattsOff
+	  </h5>
+	  
+    </body>
 </html>
