Added some changes for debugging

--- a/broadcast.html
+++ b/broadcast.html
@@ -32,7 +32,7 @@
 			  <p> </p>
 			</tr>
 			<tr>
-			  <td align="right" height="40"> <input type="image" src="submit.gif" alt="Submit" /> </td>
+			  <td align="right" height="40"> <input type="image" src="../submit.gif" alt="Submit" /> </td>
 			</tr>
 		  </table>            
          </fieldset>
