--- a/broadcast.html
+++ b/broadcast.html
@@ -7,7 +7,7 @@
 		<header style = "background-color:black;padding:10px;margin-top: -20px;margin-right: -20px;margin-left:-20px">
 	    <table>
 			<tr>
-				<td> <img src = "logoWhite.png" width = "45%"> </td>
+				<td> <img src = "http://i.skyrock.net/8511/97048511/pics/3273604904_1_4_PaCoP7kA.png" width = "45%"/> </td>
 				<td> <h1 style="font-size:8vmin;color:#66CC33;" align = right><b>Reducing energy consumption</b></h1> </td>
 				<td width = "5%"> </td>
 			</tr>
@@ -32,8 +32,16 @@
 			  <p> </p>
 			</tr>
 			<tr>
-			  <td align="right" height="40"> <input type="image" src="../submit.gif" alt="Submit" /> </td>
+			  <td align="left" height="40"><b>Title:</b></td>
+              <td align="left" height="40"><input type="text" id="title" name="title" placeholder="Enter your message title" style="width: 418px;"/></td>
 			</tr>
+            <tr>
+			  <td align="left" height="40"><b>Message:</b></td>
+              <td align="left" height="40"><textarea id="message" name="message" placeholder="Enter a message for users" rows="3" cols="50"></textarea></td>
+			</tr>
+            <tr>
+			  <td align="right" height="40"> <input type="image" src="http://i.skyrock.net/8511/97048511/pics/3273604904_1_2_LvuCpSdB.gif" alt="Submit" /> </td>  
+			<tr/>
 		  </table>            
          </fieldset>
       </form>
