--- a/broadcast.html
+++ b/broadcast.html
@@ -2,12 +2,12 @@
 <html>
 	<head >	<title>Energy reduction</title>
     </head>
-    <body bgcolor="#66CC33">
+    <body bgcolor="#3fc404">
 	   
-		<header style = "background-color:black;padding:10px;margin-top: -20px;margin-right: -20px;margin-left:-20px">
+		<header style = "background-color:green;padding:10px;margin-top: -20px;margin-right: -20px;margin-left:-20px">
 	    <table>
 			<tr>
-				<td> <img src = "http://i.skyrock.net/8511/97048511/pics/3273604904_1_4_PaCoP7kA.png" width = "45%"/> </td>
+				<td> <img src = "http://i.skyrock.net/8511/97048511/pics/3273604904_1_4_PaCoP7kA.png" width = "35%"/> </td>
 				<td> <h1 style="font-size:8vmin;color:#66CC33;" align = right><b>Reducing energy consumption</b></h1> </td>
 				<td width = "5%"> </td>
 			</tr>
